<resources>
    <string name="app_name">D.A.P. Motoristas</string>
    <!--ADICIONE STRINGS AQUI E DEPOIS REFERÊNCIE NOS DEVIDOS LUGARES -->
    <string name="nome">Nome:</string>
    <string name="email">Email:</string>
    <string name="senha">Senha:</string>
    <string name="salvar">Salvar</string>
    <string name="entrar">Entrar</string>
    <string name="endereco">Endereço:</string>
    <string name="aceitar">Aceitar</string>
    <string name="remover">Remover</string>
    <string name="solicitacoes">Solicitações</string>
    <string name="login">Login</string>
    <string name="cadastro">Cadastro</string>
    <string name="navegacao">Navegação</string>
    <string name="destino">Destino:</string>
    <string name="Msg_Tela_Login">Gestão inteligente de transporte escolar</string>
    <string name="iniciarTrajeto">Iniciar trajeto</string>
    <string name="instituicaoEnsino">Instituição de ensino: </string>
    <string name="nomeUsuario">Nome de usuário</string>
    <string name="atendimento">Atende a:</string>
    <string name="tempoEstimado">Tempo estimado:</string>
    <string name="defina_o_local">Defina o local</string>
    <string name="instituicoes_de_ensino_atendidas">Instituições de ensino atendidas:</string>
    <string name="nome_da_universidade">Nome da Universidade</string>
    <string name="endereco_perfil">Endereço:</string>
    <string name="mensalidade_rs">Mensalidade: R$</string>
    <string name="defina_o_endereco">Defina o endereço</string>
    <string name="valor_mensalidade">00,00</string>
    <string name="itinerario">Itinerário:</string>
    <string name="atende_no_periodo_da_manha">Atende no período da manha.</string>
    <string name="atende_no_periodo_da_noite">Atende no período da noite.</string>
    <string name="horario_saida">Horário: Saída às</string>
    <string name="horario_entrada_saida">00:00</string>
    <string name="retorno">retorno às</string>
    <string name="informaces_do_veiculo">Informações do veículo:</string>
    <string name="placa">Placa:</string>
    <string name="placa_exemplo">AAA0000</string>
    <string name="foto_do_veiculo">Foto do veículo:</string>
    <string name="vagas_disponiveis">Vagas disponíveis:</string>
    <string name="observacoes">Observações:</string>
    <string name="insira_aqui_alguma_informacao_adicional_se_achar_necessario">Insira aqui alguma informação adicional se achar necessário</string>
    <string name="entre">Entre.</string>
    <string name="voce_ja_tem_uma_conta">Você já tem uma conta?</string>
    <string name="cadastre_se">Cadastre-se.</string>
    <string name="nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="copyright_2022_by_vuber">Copyright © 2022 by VUBER</string>
    <string name="solicitaces">Solicitações</string>
    <string name="lista_de_alunos">Lista de Alunos</string>
    <string name="meu_cadastro">Meu cadastro</string>
    <string name="navegaco">Navegação</string>
    <string name="menu">Menu</string>
</resources>