<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TelaLogin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="145dp"
        android:src="@drawable/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/label_mensagem"
        style="@style/Edit_Mensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Msg_Tela_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        />

    <TextView
        android:id="@+id/label_login"
        style="@style/Edit_Mensagem_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_mensagem" />

    <EditText
        android:id="@+id/edit_text_email"
        style="@style/Edit_Text_em"
        android:layout_marginTop="70dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_login" />


    <EditText
        android:id="@+id/edit_text_senha"
        style="@style/Edit_Text_em"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email"
        />

    <Button
        android:id="@+id/button"
        style="@style/Edit_Button"
        android:layout_marginTop="96dp"
        android:backgroundTint="@color/LightGray"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_senha" />

    <TextView
        android:id="@+id/label_mensagem_2"
        style="@style/Edit_Mensagem_Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nao_tem_uma_conta"
        android:textColor="@color/LightGray"
        app:layout_constraintStart_toStartOf="@id/button"
        app:layout_constraintEnd_toStartOf="@id/text_mensagem_click"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <TextView
        android:id="@+id/text_mensagem_click"
        style="@style/Edit_Mensagem_Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastre_se"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/button"
        app:layout_constraintStart_toEndOf="@id/label_mensagem_2"
        app:layout_constraintTop_toBottomOf="@id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>