<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@color/white"
        tools:context=".TelaEditar">

        <ImageButton
            android:id="@+id/btn_voltar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/img_seta_voltar"
            app:iconPadding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_fotoUsuario"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_voltar"
            tools:srcCompat="@drawable/img_foto_perfil" />

        <EditText
            android:id="@+id/edit_text_nomeUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/nomeUsuario"
            android:textColor="#000000"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_fotoUsuario" />

        <TextView
            android:id="@+id/label_localAbrangencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/atendimento"
            android:textColor="#000000"
            android:textSize="15.3sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_nomeUsuario" />

        <EditText
            android:id="@+id/edit_text_localAbrangencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/defina_o_local"
            android:paddingTop="0dp"
            android:layout_marginStart="5dp"
            android:textColor="#000000"
            android:textSize="15.3sp"
            app:layout_constraintStart_toEndOf="@id/label_localAbrangencia"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_nomeUsuario" />

        <ImageView
            android:id="@+id/img_chapeu"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_localAbrangencia"
            tools:srcCompat="@drawable/img_escolaridade" />

        <TextView
            android:id="@+id/label_titulo_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/instituicoes_de_ensino_atendidas"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/img_chapeu"
            app:layout_constraintTop_toBottomOf="@id/edit_text_localAbrangencia" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintUniversidade"
            android:layout_width="359dp"
            android:layout_height="235dp"
            android:layout_marginTop="8dp"
            android:background="#E5E5E5"
            android:backgroundTint="#E5E5E5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_chapeu">

            <EditText
                android:id="@+id/edit_text_nomeUniversidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingTop="0dp"
                android:hint="@string/nome_da_universidade"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_endereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/endereco_perfil"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_nomeUniversidade" />

            <TextView
                android:id="@+id/label_mensalidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/mensalidade_rs"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/label_endereco"
                app:layout_constraintTop_toBottomOf="@id/label_endereco" />

            <EditText
                android:id="@+id/edit_text_endereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/defina_o_endereco"
                android:paddingTop="0dp"
                android:layout_marginStart="5dp"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@id/label_endereco"
                app:layout_constraintTop_toBottomOf="@id/edit_text_nomeUniversidade" />

            <EditText
                android:id="@+id/edit_text_mensalidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/valor_mensalidade"
                android:inputType="number"
                android:paddingTop="0dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:textAlignment="gravity"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@id/label_mensalidade"
                app:layout_constraintTop_toBottomOf="@id/edit_text_endereco" />

            <TextView
                android:id="@+id/label_itinerario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/itinerario"
                android:textColor="#000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_mensalidade" />

            <CheckBox
                android:id="@+id/checkBox_manha"
                android:layout_width="214dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:padding="0dp"
                android:text="@string/atende_no_periodo_da_manha"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_itinerario" />

            <CheckBox
                android:id="@+id/checkBox_noite"
                android:layout_width="214dp"
                android:layout_height="19dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:padding="0dp"
                android:text="@string/atende_no_periodo_da_noite"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox_manha" />

            <TextView
                android:id="@+id/label_horario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/horario_saida"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox_noite" />

            <EditText
                android:id="@+id/edit_text_horarioSaida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/horario_entrada_saida"
                android:inputType="time"
                android:paddingTop="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@id/label_horario"
                app:layout_constraintTop_toBottomOf="@id/checkBox_noite" />

            <TextView
                android:id="@+id/label_retorno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/retorno"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@id/edit_text_horarioSaida"
                app:layout_constraintTop_toBottomOf="@id/checkBox_noite" />

            <EditText
                android:id="@+id/edit_horarioRetorno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/horario_entrada_saida"
                android:inputType="time"
                android:paddingTop="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:textSize="13sp"
                app:layout_constraintStart_toEndOf="@+id/label_retorno"
                app:layout_constraintTop_toBottomOf="@id/checkBox_noite" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/label_informacoesVeiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/informaces_do_veiculo"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintUniversidade" />

        <TextView
            android:id="@+id/label_placaVeiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:text="@string/placa"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_informacoesVeiculo" />

        <EditText
            android:id="@+id/edit_text_placaVeiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:hint="@string/placa_exemplo"
            android:paddingTop="0dp"
            android:layout_marginStart="5dp"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/label_placaVeiculo"
            app:layout_constraintTop_toBottomOf="@id/label_informacoesVeiculo" />

        <TextView
            android:id="@+id/label_fotoVeiculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/foto_do_veiculo"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_placaVeiculo" />

        <ImageView
            android:id="@+id/img_veiculo"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="#C4C4C4"
            android:backgroundTint="#C4C4C4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_fotoVeiculo"
            tools:srcCompat="@drawable/img_sem_imagem" />

        <TextView
            android:id="@+id/label_vagasDisponiveis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/vagas_disponiveis"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_veiculo" />

        <EditText
            android:id="@+id/edit_text_vagas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="0"
            android:inputType="numberDecimal"
            android:paddingTop="0dp"
            android:gravity="center"
            android:layout_marginStart="5dp"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/label_vagasDisponiveis"
            app:layout_constraintTop_toBottomOf="@id/img_veiculo" />

        <TextView
            android:id="@+id/label_observacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/observacoes"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_vagasDisponiveis" />

        <EditText
            android:id="@+id/edit_text_observacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:hint="@string/insira_aqui_alguma_informacao_adicional_se_achar_necessario"
            android:paddingTop="0dp"
            android:inputType="textMultiLine"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_observacoes" />


        <Button
            android:id="@+id/btn_salvar"
            style="@style/Edit_Button"
            android:backgroundTint="@color/LightGray"
            android:text="@string/salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_observacao" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>