<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCadastro">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="145dp"
        android:src="@drawable/img_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_mensagem"
        style="@style/Edit_Mensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Msg_Tela_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        />

    <TextView
        android:id="@+id/text_login"
        style="@style/Edit_Mensagem_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/cadastro"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mensagem" />

    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text_em"
        android:hint="@string/nome"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mensagem"
        />

    <EditText
        android:id="@+id/edit_email"
        style="@style/Edit_Text_em"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_nome" />

    <EditText
        android:id="@+id/edit_senha"
        style="@style/Edit_Text_em"
        android:hint="@string/senha"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        />


    <TextView
        android:id="@+id/text_mensagem_click"
        style="@style/Edit_Mensagem_Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="Você já tem uma conta?"
        android:textColor="@color/LightGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        />

    <Button
        android:id="@+id/button"
        style="@style/Edit_Button"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/LightGray"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_senha" />

    <TextView
        android:id="@+id/text_mensagem_click1"
        style="@style/Edit_Mensagem_Click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="165dp"
        android:text="Entre."
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>