<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaLoginCadastro">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/captura_de_tela_2022_07_29_070043"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_mensagem"
        style="@style/Edit_Mensagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Msg_Tela_Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <Button
        android:id="@+id/button_login"
        style="@style/Edit_Button"
        android:layout_marginTop="175dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_mensagem" />

    <Button
        android:id="@+id/button_cadastro"
        style="@style/Edit_Button"
        android:backgroundTint="@color/LightGray"
        android:text="@string/cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login"
        android:layout_marginTop="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>